--- a/index.html
+++ b/index.html
@@ -7,19 +7,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="video-container">
-    <div class="video-wrapper">
-      <video id="video1" class="video" autoplay muted loop>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+  <section class="videoSection">
+    <div class="video-container">
+      <div class="video-wrapper">
+        <video id="video1" class="video" autoplay muted loop>
+          <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="video-wrapper">
+        <div class="black-overlay"></div>
+        <video id="video2" class="video" autoplay muted loop>
+          <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="scroll-indicator">
+        <ul class="indicator-list">
+          <li class="indicator-item black"></li>
+          <li class="indicator-item white"> <span></span></li>
+        </ul>
+      </div>
     </div>
-    <div class="video-wrapper">
-      <div class="black-overlay"></div>
-      <video id="video2" class="video" autoplay muted loop>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
-    </div>
-  </div>
+  </section>
+  
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
